<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PhoneActivity">

    <LinearLayout
        android:id="@+id/top_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reset_pass_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/back"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/explores_wo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="30dp"
            android:gravity="top"
            android:text="Phone Verification"
            android:textAppearance="@style/explores_wo"
            android:textColor="@color/white"
            android:layout_marginLeft="120dp" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_gravity="center"
        app:lottie_rawRes="@raw/loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <LinearLayout
        android:id="@+id/body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/top_shape">

        <TextView
            android:id="@+id/please_ente"
            android:layout_width="335dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:fontFamily="@font/calibri"
            android:text="@string/please_ente"
            android:textAppearance="@style/please_ente"
            android:lineSpacingExtra="4sp"
            android:translationY="-1.8sp"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/phone_numbe"
            android:layout_width="113dp"
            android:layout_height="21dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:fontFamily="@font/calibri"
            android:text="@string/phone_numbe"
            android:textAppearance="@style/phone_numbe"
            android:lineSpacingExtra="0sp"
            android:gravity="top"
            />

        <LinearLayout
            android:id="@+id/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/codeEt"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingLeft="30dp"
                android:drawableRight="@null"
                android:paddingRight="20dp"
                android:padding="@dimen/_10sdp"
                android:editable="false"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/mainText"
                android:drawableStart="@drawable/flag"
                android:background="@drawable/phone_edit_shape"
                android:fontFamily="@font/calibri"
                android:textAppearance="@style/some_id"
                android:text="@string/some_id"
                android:textAlignment="center"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="30dp"
                android:drawableLeft="@drawable/flag"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:drawableRight="@null"
                android:paddingRight="20dp"
                android:padding="@dimen/_10sdp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/mainText"
                android:drawableStart="@drawable/phone_icon"
                android:background="@drawable/phone_edit_shape"
                android:fontFamily="@font/calibri"
                android:textAppearance="@style/some_id"
                android:hint="01764310157"
                android:textAlignment="center"
                android:inputType="number"
                android:maxLines="1"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/phone_icon"
                android:gravity="center_horizontal" />

        </LinearLayout>



        <TextView
            android:id="@+id/we_will_sen"
            android:layout_width="307dp"
            android:layout_height="22dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:text="@string/we_will_sen"
            android:textAppearance="@style/we_will_sen"
            android:lineSpacingExtra="4sp"
            android:translationY="-1.8sp"
            android:gravity="top"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/forgotpassbuttonshape"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/calibri"
            android:text="Continue"
            android:textColor="@color/white"
            android:textSize="20dp" />


    </LinearLayout>

</RelativeLayout>

