<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:background="@drawable/logo"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp"
        android:layout_below="@id/top_layout"
        android:background="@android:color/holo_red_dark"
        tools:targetApi="ice_cream_sandwich" />

    <LinearLayout
        android:id="@+id/edit_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_below="@id/top_layout">

        <TextView
            android:id="@+id/phonellabelled"
            android:layout_width="324dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="45dp"
            android:layout_alignParentTop="true"
            android:text="Phone Number"
            android:textSize="20sp"
            android:textAppearance="@style/labelled"
            android:lineSpacingExtra="7sp"
            android:translationY="-3.5sp"
            android:gravity="top"
            />
        <LinearLayout
            android:id="@+id/edit_text_layout_phone"
            android:layout_below="@id/phonellabelled"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/codeEt"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingLeft="30dp"
                android:drawableRight="@null"
                android:paddingRight="20dp"
                android:editable="false"
                android:focusable="false"
                android:clickable="false"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/mainText"
                android:drawableStart="@drawable/flag"
                android:background="@drawable/phone_edit_shape"
                android:fontFamily="@font/calibri"
                android:textAppearance="@style/some_id"
                android:hint="@string/some_id"
                android:textAlignment="center"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="30dp"
                android:drawableLeft="@drawable/flag"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:drawableRight="@null"
                android:paddingRight="20dp"
                android:padding="@dimen/_10sdp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/mainText"
                android:drawableStart="@drawable/phone_icon"
                android:background="@drawable/phone_edit_shape"
                android:fontFamily="@font/calibri"
                android:textAppearance="@style/some_id"
                android:hint="01764310157"
                android:textAlignment="center"
                android:inputType="number"
                android:maxLines="1"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/phone_icon"
                android:gravity="center_horizontal" />

        </LinearLayout>




    </LinearLayout>
    <LinearLayout
        android:id="@+id/edit_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_below="@id/edit_layout_phone">

        <TextView
            android:id="@+id/passwordllabelled"
            android:layout_width="324dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="45dp"
            android:layout_alignParentTop="true"
            android:text="Password"
            android:textSize="20sp"
            android:textAppearance="@style/labelled"
            android:lineSpacingExtra="7sp"
            android:translationY="-3.5sp"
            android:gravity="top"
            />
        <LinearLayout
            android:id="@+id/edit_text_layout"
            android:layout_below="@id/phonellabelled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:drawableRight="@null"
                android:paddingRight="20dp"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/mainText"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:background="@drawable/phone_edit_shape"
                android:fontFamily="@font/calibri"
                android:textAppearance="@style/some_id"
                android:hint="************"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:maxLines="1"
                android:gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_outline_lock_24"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="50dp" />

        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/edit_layout_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/forgot_pass"
            android:textColor="#6342E8"
            android:textSize="15dp"
            android:textAppearance="@style/not_registe"
            android:gravity="center_vertical"
            />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/rectangle_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/forgot_pass"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/calibri"
            android:text="Log IN"
            android:textAppearance="@style/log_in"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/not_registe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/not_registe"
            android:textAppearance="@style/not_registe"
            android:gravity="center_vertical"
            />

        <TextView
            android:id="@+id/createAccountLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/not_account"
            android:textColor="#6342E8"
            android:textAppearance="@style/not_registe"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/google_logo" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/facebook_logo"
            android:layout_marginLeft="@dimen/_10sdp" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/twitter"
            android:layout_marginLeft="@dimen/_10sdp" />

    </LinearLayout>









</LinearLayout>

